# ant-colony

./: .gitignore  CMakeLists.txt  README.md  shell.nix
src/: main.cpp
src/controllers/: ant.cpp  data.hpp  initialize.cpp  manager.cpp  manager.hpp  random.cpp  random.hpp  simulation.cpp
src/models/: ant.cpp  ant.hpp  case.cpp  case.hpp  colony.cpp  colony.hpp  coordinate.cpp  coordinate.hpp  data.cpp  data.hpp  grid.cpp  grid.hpp
src/views/: barrier.cpp  data.cpp  display.cpp  display.hpp  event.cpp  init.cpp  menu.cpp  menu.hpp
tests/models/: ant.cpp  case.cpp  colony.cpp  coordinate.cpp  data.cpp  grid.cpp
